Remove color palette from storybook

--- a/.storybook/preview-body.html
+++ b/.storybook/preview-body.html
@@ -34,4 +34,8 @@
     .docblock-argstable-body select {
         background: transparent !important;
     }
+
+    .docblock-colorpalette span {
+        display: none;
+    }
 </style>
