--- a/.storybook/preview-body.html
+++ b/.storybook/preview-body.html
@@ -1,5 +1,5 @@
 <style>
     .docs-story {
-        background: var(--background-primary) !important;
+        background: var(--background-primary_alt) !important;
     }
 </style>
